--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,25 +1,51 @@
-@import './variables.scss';
-@import './responsive.scss';
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap');
+
+@import "./variables.scss";
+@import "./responsive.scss";
 
 html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-
-body{
-    font-size: 1.6rem;
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    width: 100%;
-    background: linear-gradient(180deg, $purple 0%, $light-purple 25%, $light 100%);
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-.contenedor{
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 95%;
+body {
+  font-size: 1.6rem;
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  width: 100%;
+  font-family: 'Titillium Web', sans-serif;
+  background: linear-gradient(
+    180deg,
+    $purple 0%,
+    $light-purple 25%,
+    $light 100%
+  );
+}
+
+h1, h2, h3, h4, h5, h6, p, ul, li, a, span {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 90%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
