--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,71 +1,127 @@
-
 @import "../../assets/styles/variables.scss";
 @import "../../assets/styles/responsive.scss";
-.header{
+.header {
+  background-color: $dark;
+  border-bottom: $light 0.5rem solid;
 
-    background-color: $dark;
-    border-bottom: $light .5rem solid;
+  .container {
+    .top-header {
+      width: 100%;
+      text-align: center;
+      padding: 2rem 0;
 
-    .container{
-        .top-header{
+      h1,
+      h2,
+      a {
+        color: white;
+      }
 
-            width: 100%;
-            text-align: center;
-            padding: 2rem 0;
-
-            a, h2{
-                color: white;
-            }
-
-            a{
-                h1{
-                    font-size: 4rem;
-                    
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    text-transform: uppercase;
-
-                    span{
-                        font-size: 2rem;
-                        opacity: .8;
-                        text-decoration: line-through;
-                        width: 100%;
-                        text-align: right;
-                        
-                    }
-                }
-            }
-
-            h2{
-                margin: 2rem 2rem 0 2rem;
-                font-size: 3.4rem;
-                line-height: 1;
-            }
-
+      h1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-transform: uppercase;
+        a {
+          font-size: 4rem;
+          font-weight: 900;
         }
+        span {
+          font-weight: 700;
+          font-size: 2rem;
+          opacity: 0.8;
+          text-decoration: line-through;
+          width: 100%;
+          text-align: right;
+          transition: all 0.5s ease;
 
-        .middle-header{
-            width: 100%;
-            .socials{
-                display: flex;
-                justify-content: center;
-                align-items: center; 
-                gap: 2rem;
-                li{
-                    a{
-                        color: white;
-                        font-size: 3.5rem;
-                        transition: all .3s;
-                        &:hover{
-                            color: $light-purple;
-                        }
-                    }
-                }
-            }
+          @include md {
+            text-align: right;
+            width: 70%;
+            line-height: 1;
+            transition: all 0.5s ease;
+          }
+
+          @include lg {
+            width: 50%;
+            transition: all 0.5s ease;
+          }
         }
+      }
+
+      h2 {
+        margin: 2rem 2rem 0 2rem;
+        font-size: 3.4rem;
+        line-height: 1;
+      }
     }
-   
 
+    .middle-header {
+      width: 100%;
+      .socials {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        li {
+          a {
+            color: white;
+            font-size: 3.5rem;
+            transition: all 0.3s;
+            &:hover {
+              color: $light-purple;
+            }
+          }
+        }
+      }
+    }
+
+    .bottom-header {
+      .nav {
+        ul {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 1rem;
+          margin: 1rem 0;
+          transition: all 0.5s ease;
+
+          @include md {
+            flex-direction: row;
+            gap: 2rem;
+            transition: all 0.5s ease;
+          }
+
+          @include lg {
+            gap: 5rem;
+            transition: all 0.5s ease;
+          }
+
+          li {
+            a {
+              color: $white;
+              font-size: 2rem;
+              font-weight: 600;
+              transition: all 0.5s ease;
+
+              &:hover {
+                color: $light-purple;
+              }
+
+              @include md {
+                font-size: 2.2rem;
+                transition: all 0.5s ease;
+              }
+
+              @include lg {
+                font-size: 2.4rem;
+                transition: all 0.5s ease;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
