--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,7 +2,7 @@
 @import "../../assets/styles/responsive.scss";
 .header {
   background-color: $dark;
-  border-bottom: $light 0.5rem solid;
+  border-bottom: $light-purple 0.5rem solid;
 
   .container {
     .top-header {
