--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -5,11 +5,13 @@
   width: 100%;
   background-color: $dark;
   padding: 1rem 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  animation: slide-bottom 0.4s linear both;
+ 
 
   &.fixed {
-    position: fixed;
-    bottom: 0;
-    left: 0;
     animation: slide-top 0.4s linear both;
   }
 
@@ -63,3 +65,14 @@
     transform: translateY(0);
   }
 }
+
+@keyframes slide-bottom {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
+
+
