Bouncing icons done to show skills

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -22,9 +22,21 @@
         justify-content: center;
         align-items: center;
         text-transform: uppercase;
+        
         a {
           font-size: 4rem;
           font-weight: 900;
+          transition: letter-spacing 0.5s ease;
+
+          @include md {
+            letter-spacing: .5rem;
+            transition: letter-spacing 0.5s ease;
+          }
+
+          @include lg {
+            letter-spacing: 1rem;
+            transition: letter-spacing 0.5s ease;
+          }
         }
         span {
           font-weight: 700;
