--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap");
 
 @import "./variables.scss";
 @import "./responsive.scss";
@@ -20,7 +20,7 @@ body {
   margin: 0;
   min-height: 100vh;
   width: 100%;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
   background: linear-gradient(
     180deg,
     $purple 0%,
@@ -29,7 +29,17 @@ body {
   );
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, li, a, span {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li,
+a,
+span {
   margin: 0;
   padding: 0;
 }
@@ -49,4 +59,23 @@ ul {
 a {
   text-decoration: none;
   cursor: pointer;
+}
+
+.h2-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3rem;
+  margin: 2rem 0;
+  font-size: 3.2rem;
+  font-weight: 700;
+  font-family: inherit;
+  letter-spacing: .5rem;
+
+
+  &::before {
+    content: "< ";
+  }
+  &::after {
+    content: " />";
+  }
 }
