Fixed responsive in skilss and adding project page

--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -27,6 +27,12 @@
         border-radius: 50%;
         background-color: transparent;
         font-size: 4rem;
+
+        @include md {
+          width: 6rem;
+          height: 6rem;
+          font-size: 5rem;
+        }
       }
     }
   }
