--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -9,8 +9,6 @@
     margin: 0 0 4rem;
   }
 
-  
-
   .container {
     display: flex;
     flex-direction: column;
@@ -32,12 +30,10 @@
         object-fit: cover;
         border: 0.5rem $light-purple solid;
         animation: shadow-pulse 2s infinite;
-        transition: scale 0.5s ease;
 
         &:hover {
-          scale: 1.1;
-          transition: scale 0.5s ease;
           cursor: pointer;
+          animation: shadow-pulse 1s infinite;
         }
       }
     }
@@ -77,12 +73,10 @@
           }
         }
 
-
         h3 {
           font-size: 2.8rem;
           font-weight: 800;
         }
-
         p {
           @include md {
             font-size: 1.8rem;
@@ -108,6 +102,3 @@
     box-shadow: 0 0 1rem $white;
   }
 }
-
-
-
