--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -16,99 +16,131 @@
       padding: 1rem;
       font-family: inherit;
 
-      legend {
-        font-size: 3rem;
-        font-weight: 600;
-        padding: 2rem 0;
-        line-height: 1.2;
-      }
+      .form {
 
-      .form-field {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        resize: vertical;
-        padding: 1rem 0;
+        @include md {
+          width: 90%;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 2rem;
+        }
 
-        label {
-          font-size: 2rem;
-          text-align: left;
-          padding: 0.5rem;
+        legend {
+          font-size: 3rem;
           font-weight: 600;
-        }
+          padding: 2rem 0;
+          line-height: 1.2;
 
-        input,
-        textarea {
-          font-size: 1.8rem;
-          padding: 1rem;
-          border: none;
-          border-bottom: 0.2rem solid $light-purple;
-          color: $black;
-
-          &:focus {
-            outline: none;
+          @include md {
+            grid-column: 1/3;
           }
+
         }
 
-        textarea {
-          min-height: 10rem;
-          resize: vertical;
-          border: 0.2rem solid $light-purple;
-          border-radius: 0.5rem;
-          font-family: inherit;
-        }
-
-        .user-info {
+        .form-field {
           display: flex;
-          gap: 0.5rem;
+          flex-direction: column;
+          width: 100%;
+          resize: vertical;
+          padding: 1rem 0;
 
-          img {
-            width: 5rem;
-            height: 5rem;
-            border-radius: 50%;
-            object-fit: cover;
+          
+          @include md {
+            &:nth-child(4), &:nth-child(5), &:nth-child(6), &:nth-child(7){
+              grid-column: 1/3;
+            }
           }
 
-          .input {
-            width: 100%;
-            display: flex;
-            align-items: center;
+          label {
+            font-size: 2rem;
+            text-align: left;
+            padding: 0.5rem;
+            font-weight: 600;
+          }
 
-            input {
+          input,
+          textarea {
+            font-size: 1.8rem;
+            padding: 1rem;
+            border: none;
+            border-bottom: 0.2rem solid $light-purple;
+            color: $black;
+
+            &:focus {
+              outline: none;
+            }
+          }
+
+          textarea {
+            min-height: 10rem;
+            resize: vertical;
+            border: 0.2rem solid $light-purple;
+            border-radius: 0.5rem;
+            font-family: inherit;
+          }
+
+          .user-info {
+            display: flex;
+            gap: 0.5rem;
+
+            img {
+              width: 5rem;
+              height: 5rem;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+
+            .input {
               width: 100%;
+              display: flex;
+              align-items: center;
+
+              input {
+                width: 100%;
+              }
             }
           }
         }
-      }
 
-      .buttons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 1rem;
+        .buttons {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          gap: 1rem;
 
-        input{
-          width: 100%;
-          padding: 1rem;
-          border-radius: 0.5rem;
-          background-color: $dark;
-          width: 100%;
-          cursor: pointer;
-          border-radius: 0.5rem;
-          border: none;
-          opacity: 1;
-          transition: opacity 0.5s ease;
-          color: $white;
-          text-transform: uppercase;
-          font-weight: bold;
-          font-family: inherit;
-          letter-spacing: .2rem;
-          font-size: 1.6rem;
+          @include md {
+            grid-column: 1/3;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+          }
 
-          &:hover {
-            opacity: .9;
+          input {
+            width: 100%;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            background-color: $dark;
+            width: 100%;
+            cursor: pointer;
+            border-radius: 0.5rem;
+            border: none;
+            opacity: 1;
             transition: opacity 0.5s ease;
+            color: $white;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-family: inherit;
+            letter-spacing: 0.2rem;
+            font-size: 1.6rem;
+
+            @include md {
+              width: 20rem;
+            }
+
+            &:hover {
+              opacity: 0.9;
+              transition: opacity 0.5s ease;
+            }
           }
         }
       }
