One test real project added. Portfolio V1 ready. More projects to be added

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -42,6 +42,7 @@
                     
                     img{
                         width: 100%;
+                        max-width: 30rem;
                         border-radius: 1.5rem;
                     }
                 }
