Adding more projects

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -44,6 +44,8 @@
                         width: 100%;
                         max-width: 30rem;
                         border-radius: 1.5rem;
+                        height: 15rem;
+                        object-fit: cover;
                     }
                 }
 
