--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -50,6 +50,7 @@
                 }
 
                 .card-body{
+                    min-height: 14rem;
                     p{
                         margin: 1rem 0;
                         text-align: justify;
