--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -2,6 +2,8 @@
 
 $purple: #7743DB;
 $violet: #C3ACD0;
+$yellow: #FFB100;
+$lightYellow: #F9E79F;
 $cream: #F7EFE5;
 $lightCream: #FFFBF5;
 $white: #fff;
