--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -7,7 +7,7 @@ $lightYellow: #F9E79F;
 $cream: #F7EFE5;
 $lightCream: #FFFBF5;
 $white: #fff;
-$black: #000;
+$blackColor: #000;
 
 $fontOpenSans: 'Open Sans', sans-serif;
 $fontTitillium: 'Titillium Web', sans-serif;
