--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,7 +22,6 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;
 }
 
 h1,
@@ -192,10 +191,83 @@ ul {
   width: 90%;
   max-width: 120rem;
   margin: 0 auto;
-  margin: 1rem auto;
+  margin: 3rem auto;
+}
+.about__heading {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: clamp(3rem, 6vw, 6rem);
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: #fff;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+}
+.about__heading::after {
+  content: "• • •";
+  display: block;
+  color: #FFB100;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .about__heading::after {
+    margin-top: -2rem;
+  }
+}
+.about__grid {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(1, 1fr);
+}
+@media (min-width: 768px) {
+  .about__grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    justify-items: center;
+  }
+}
+.about__image-container {
+  border-radius: 50%;
+  overflow: hidden;
+  background-image: url("../assets/img/shape.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 110%;
+  background-color: #16092f;
+  display: grid;
+  place-items: center;
 }
 .about__image {
-  border-radius: 40%;
+  border-radius: 10rem;
+}
+.about__info {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+.about__description {
+  font-size: clamp(1rem, 6vw, 1.6rem);
+  text-align: justify;
+  margin-bottom: 1rem;
+  line-height: 1.5;
+  color: #16092f;
+}
+.about__description:last-of-type {
+  margin-bottom: 0;
+}
+.about__keyword {
+  background-image: linear-gradient(to bottom right, #7743db, #966ee3, #966ee3, #ffb100, #ffd066);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=app.css.map */
