--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,15 +1,58 @@
 @use "../base/variables" as v;
 @use "../base/mixins" as m;
 
-.about{
-    @include m.container;
-    margin: 1rem auto;
+.about {
+  @include m.container;
+  margin: 3rem auto;
 
-    &__image-container{
-        
-    }
+  &__heading {
+    @include m.heading;
+  }
 
-    &__image{
-        border-radius: 40%;
+  &__grid {
+    @include m.grid(1, 2rem);
+
+    @include m.tablet {
+      grid-template-columns: 1fr 2fr;
+
+      align-items: center;
+      justify-items: center;
     }
+  }
+
+  &__image-container {
+    border-radius: 50%;
+    overflow: hidden;
+    background-image: url("../assets/img/shape.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 110%;
+    background-color: darken(v.$purple, 45%);
+    display: grid;
+    place-items: center;
+  }
+
+  &__image {
+    border-radius: 10rem;
+  }
+
+  &__info {
+    @include m.card;
+  }
+
+  &__description {
+    font-size: clamp(1rem, 6vw, 1.6rem);
+    text-align: justify;
+    margin-bottom: 1rem;
+    line-height: 1.5;
+    color: darken(v.$purple, 45%);
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+
+  &__keyword{
+    @include m.keyword;
+  }
 }
