--- a/src/css/app.css
+++ b/src/css/app.css
@@ -259,7 +259,7 @@ ul {
   margin-bottom: 0;
 }
 .about__keyword {
-  background-image: linear-gradient(to bottom right, #7743db, #966ee3, #966ee3, #ffb100, #ffd066);
+  background-image: linear-gradient(to bottom right, #7743db, #966ee3, #966ee3, #ffb100 85%, #ffd066);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0 0;
