Adding an achievement card

--- a/src/sass/components/_achievements.scss
+++ b/src/sass/components/_achievements.scss
@@ -15,7 +15,11 @@
         @include m.grid(1, 2rem);
 
         @include m.tablet{
-            @include m.grid(3, 2rem);
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.desktop{
+            @include m.grid(4, 2rem);
         }
     }
 }
@@ -26,6 +30,10 @@
     border-radius: .8rem;
     text-align: center;
     transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-between;
 
     &:nth-child(odd){
         border-top: .5rem solid v.$yellow;
