--- a/src/css/app.css
+++ b/src/css/app.css
@@ -309,7 +309,14 @@ ul {
   .achievements__grid {
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .achievements__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -321,6 +328,10 @@ ul {
   border-radius: 0.8rem;
   text-align: center;
   transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between;
 }
 .achievement:nth-child(odd) {
   border-top: 0.5rem solid #FFB100;
