--- a/src/css/app.css
+++ b/src/css/app.css
@@ -298,8 +298,8 @@ ul {
   }
 }
 .achievements__grid {
-  width: 90%;
-  max-width: 90rem;
+  width: 85%;
+  max-width: 100rem;
   margin: 0 auto;
   display: grid;
   gap: 2rem;
@@ -361,9 +361,6 @@ ul {
     color: #7743DB;
   }
 }
-.achievement:hover {
-  cursor: pointer;
-}
 .achievement__title {
   margin-bottom: 1rem;
   text-transform: uppercase;
@@ -374,6 +371,83 @@ ul {
   font-size: 3rem;
   font-weight: 900;
   font-family: "Titillium Web", sans-serif;
+}
+
+.skills {
+  margin: 3rem auto;
+}
+.skills__heading {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: clamp(3rem, 6vw, 6rem);
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: #fff;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+}
+.skills__heading::after {
+  content: "• • •";
+  display: block;
+  color: #FFB100;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .skills__heading::after {
+    margin-top: -2rem;
+  }
+}
+.skills__grid {
+  width: 80%;
+  max-width: 90rem;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  border-radius: 0.8rem;
+  border-top: 0.5rem solid #7743DB;
+  border-bottom: 0.5rem solid #FFB100;
+  border-right: 0.5rem solid #FFB100;
+  border-left: 0.5rem solid #7743DB;
+  height: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skills__icons {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  height: 25rem;
+}
+.skills__icon {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  background-color: transparent;
+  font-size: 6rem;
+  transition: font-size 0.3s, width 0.3s, height 0.3s;
+}
+@media (min-width: 768px) {
+  .skills__icon {
+    width: 7rem;
+    height: 7rem;
+    font-size: 7rem;
+  }
+}
+@media (min-width: 1024px) {
+  .skills__icon {
+    width: 8rem;
+    height: 8rem;
+    font-size: 8rem;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
