--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 3rem;
+  border-top: .3rem solid rgba(v.$white, 0.1);
 
   @include m.tablet {
     @include m.container;
@@ -21,6 +22,7 @@
   }
 
   &__icon {
+    margin: 3rem 0 0;
     span {
       display: block;
       width: 4rem;
@@ -55,7 +57,6 @@
     &.close {
       height: 100%;
       opacity: 1;
-      transition: height 0.3s, opacity 0.3s;
 
       .navbar__link {
         opacity: 1;
