Creating project card stricture

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -275,7 +275,7 @@ ul {
 .about__info {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
-  border-radius: 2rem;
+  border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 .about__description {
@@ -352,9 +352,8 @@ ul {
 .achievement {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
-  border-radius: 2rem;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 0.8rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   text-align: center;
   transition: transform 0.3s;
   display: flex;
@@ -434,9 +433,8 @@ ul {
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
-  border-radius: 2rem;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 0.8rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-top: 0.5rem solid #7743DB;
   border-bottom: 0.5rem solid #FFB100;
   border-right: 0.5rem solid #FFB100;
@@ -504,6 +502,42 @@ ul {
   .projects__heading::after {
     margin-top: -2rem;
   }
+}
+.projects__grid {
+  width: 90%;
+  max-width: 120rem;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(1, 1fr);
+}
+@media (min-width: 768px) {
+  .projects__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .projects__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1200px) {
+  .projects__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.project {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  border-radius: 0.8rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .footer {
