--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -75,7 +75,7 @@
 @mixin card {
   background-color: rgba(v.$white, 0.8);
   padding: 2rem;
-  border-radius: 2rem;
+  border-radius: .8rem;
   box-shadow: rgba(v.$blackColor, 0.25) 0px 0.0625em 0.0625em,
     rgba(v.$blackColor, 0.25) 0px 0.125em 0.5em,
     rgba(v.$white, 0.1) 0px 0px 0px 1px inset;
