--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -9,6 +9,25 @@
     &__heading{
         @include m.heading;
     }
+
+    &__grid{
+        @include m.container;
+        @include m.grid(1, 2rem);
+
+        @include m.tablet{
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.desktop{
+            @include m.grid(3, 2rem);
+        }
+
+        @include m.desktopXL{
+            @include m.grid(4, 2rem);
+        }
+    }
 }
 
-.project{}
+.project{
+    @include m.card;
+}
